adicionando album de fotos

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -73,7 +73,7 @@
 				<h2>Sobre a nutricionista</h2>
 				<img id="ft" src="img/nutri.jpg"/>
 				<span id="tx">
-					<h2>Tamires Lima Viana</h2> 
+					<h2>Tamires Lima da Silva</h2> 
 					<h3>Nutricionista, formada pela<br/>UNINOVAFAPI - Teresina, Piauí</h3>
     				<p>Durante sua graduação obteve experiências grandiosas atuando em diferentes áreas como, por exemplo, na parte social na Maternidade Evangelina Rosa, na parte de alimentação no SESC Teresina e no HUT(Hospital universitário de Teresina) área de clinicas e atualmente está trabalhando na área de UAN (Unidade de Alimentação e Nutrição) onde pretende continuar atuando.</p>
    					<p>Desde muito jovem Tamires se encantou pelo mundo da alimentação, cursou seu ensino médio no Instituto Federal de Educação,Ciência e Tecnologia do Piaui- Campus Parnaíba, onde realizou o Curso de Técnico em Edificações, porém sua paixão pela alimentação foi mais forte e incentivou-a ao estudo na área da nutrição.</p>
