--- a/sobre.html
+++ b/sobre.html
@@ -50,6 +50,7 @@
 						<li>Tawan de Oliveira Rodrigues Maciel</li>
 						<li>Wendell dos Santos Silva</li>
 						<li>André Henrique Pereira Martins</li>
+						<li>Isabele Alves de Sousa</li>
 					</ul>
 				</article>
 				<article id="turm">
@@ -81,18 +82,13 @@
 						<li>Laercio Souza da Silva</li>
 						<li>João Victor Carvalho Araujo</li>
 						<li>João Victor dos Santos Silva</li>
-						<li>Igor Ferreira <br/> Pereira</li>
-						<li>Isabele Alves de Sousa</li>
 						<li>Jamily de Araujo Sousa</li>
-						<li>Francisco Vitor Costa dos Santos</li>
 						<li>Gabriel Assuero Ribeiro de Sousa</li>
-						<li>Hérick Gomes <br/> Costa</li>
 						<li>Ester Almeida de Sousa</li>
 						<li>Francisco de Jesus da Silva Lopes</li>
 						<li>Francisco Edward Pinho Cardoso</li>
 						<li>Diego Vieira <br/> da Silva</li>
 						<li>Emilly Martins Ferreira Horta</li>
-						<li>Érica Cardoso <br/> Brito</li>
 						<li>Carlos Vinicius Barros de Morais</li>
 						<li>Damares Suelen F. do Nascimento</li>
 						<li>Denilson da Silva Escorcio</li>
@@ -107,10 +103,14 @@
 				<h2>Sobre o site</h2>
 				<p>Esse projeto foi idealizado e desenvolvido pelos alunos ingressantes do primeiro ano do ensino médio integrado ao técnico em informática do Instituto Federal de Educação, Ciência e Tecnologia do Piauí(IFPI) campus Parnaíba. Com o objetivo de ressaltar pontos positivos e importantes em relação à interferência no modo atual de alimentação dos jovens, nosso projeto coloca a tecnologia de modo geral como uma ferramenta de importante utilidade para alcançar o objetivo de um projeto em busca de vida saudável.</p>
 				<p>Entendendo que os jovens da chamada “geração z” estão sempre expostos a uma infinidade de informações das mais diversas possíveis e já estão muito mais conscientes que uma alimentação saUdável é a chave para uma vida melhor e duradoura, esse site vem com o objetivo de usar uma linguagem simples e jovem para chamar a atenção a um problema que assola a população mundial como, por exemplo, o problema da obesidade, e apresentando também soluções simples e eficazes com atitudes que podem ser feitas em qualquer lugar da casa ou apartamento, consiste em tentar proporcionar o tão conhecido “primeiro-passo” a uma vida consciente .<p>
+				<p>O site foi exposto no dia 18 de outubro de 2016 na sala S11 do campus de Parnaíba do IFPI.</p>
 			</aside>
 			<aside class="windgets2">
 				<h2>Sobre a turma</h2>
 				<p>Esta turma, durante a reaização do projeto, no ano de 2016, estava a cursar o 1º ano do Curso Técnico em Informática Integrado ao Ensino Médio no IFPI (Instituto Federal do Piauí) - Campus Parnaíba. Turma composta por 50 alunos, aonde a faixa etária varia dos 14 aos 20 anos.</p>
+			</aside>
+			<aside class="windgets3">
+				<h2 onclick="window.location.href='fotos.html'">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
