modificação no album de foto

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -79,10 +79,17 @@
    					<p>Desde muito jovem Tamires se encantou pelo mundo da alimentação, cursou seu ensino médio no Instituto Federal de Educação,Ciência e Tecnologia do Piaui- Campus Parnaíba, onde realizou o Curso de Técnico em Edificações, porém sua paixão pela alimentação foi mais forte e incentivou-a ao estudo na área da nutrição.</p>
 				</span>
 			</aside>
+			<aside class="windgets3">
+				<h2 onclick="window.location.href='fotos.html'" onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
+				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" onclick="window.location.href='fotos.html'" id="figCap">
+					<img id="capa" src="img/fotos-snct/reufi (capa).jpg">
+				</figure>
+			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
 				<p>Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
 			</footer>
 		</div>
 	</body>
+	<script language="javascript" src="js/fadein-talk.js"></script>
 </html>
