--- a/index.html
+++ b/index.html
@@ -67,11 +67,18 @@
 				<p>Não pode ser aplicado em crianças. Pessoas musculosas podem ter o IMC alto e não serem consideradas gordas. A influência de diferenças raciais e étnicas (de acordo com a organização mundial de saúde, pessoas de origem asiática poderiam ser consideradas acima do peso com um IMC de 23).</p>
 				<p>O (IMC) Índice de Massa Corporal, apesar de ter alguns problemas ainda é o método mais rápido para obter a informação se está abaixo do peso normal, acima do peso ideal, ou obeso.</p>
 			</aside>
+			<aside class="windgets3">
+				<h2 onclick="window.location.href='fotos.html'" onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
+				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" onclick="window.location.href='fotos.html'" id="figCap">
+					<img id="capa" src="img/fotos-snct/reufi (capa).jpg">
+				</figure>
+			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
 				<p>Site 100% desenvolvido em HTML5, CSS3 e Javascript</p>
 			</footer>
 		</div>
 	</body>
+	<script language="javascript" src="js/fadein-talk.js"></script> 
     <script language="javascript" src="js/imc-calc-script.js"></script> 
 </html>
