--- a/fotos.html
+++ b/fotos.html
@@ -40,18 +40,18 @@
 				</figcaption>
 			</figure>
 			</section>	
-			<aside class="windgets2">
-				<h2>Clique nas fotos para ver.</h2>
-				<img class="img0" id="img1" src="img/fotos-snct/reufi (1).jpg" onclick="photo(1)">
-				<img class="img0" id="img2" src="img/fotos-snct/reufi (2).jpg" onclick="photo(2)">
-				<img class="img0" id="img3" src="img/fotos-snct/reufi (3).jpg" onclick="photo(3)">
-				<img class="img0" id="img4" src="img/fotos-snct/reufi (4).jpg" onclick="photo(4)">
-				<img class="img0" id="img5" src="img/fotos-snct/reufi (5).jpg" onclick="photo(5)">
-				<img class="img0" id="img6" src="img/fotos-snct/reufi (6).jpg" onclick="photo(6)">
-				<img class="img0" id="img7" src="img/fotos-snct/reufi (7).jpg" onclick="photo(7)">
-				<img class="img0" id="img8" src="img/fotos-snct/reufi (8).jpg" onclick="photo(8)">
-				<img class="img0" id="img9" src="img/fotos-snct/reufi (9).jpg" onclick="photo(9)">
-				<img class="img0" id="img10" src="img/fotos-snct/reufi (10).jpg" onclick="photo(10)">
+			<aside class="windgets4">
+				<h2>Clique nas fotos para ver</h2>
+					<img class="img0" id="img1" src="img/fotos-snct/reufi (1).jpg" onclick="photo(1)">
+					<img class="img0" id="img2" src="img/fotos-snct/reufi (2).jpg" onclick="photo(2)">
+					<img class="img0" id="img3" src="img/fotos-snct/reufi (3).jpg" onclick="photo(3)">
+					<img class="img0" id="img4" src="img/fotos-snct/reufi (4).jpg" onclick="photo(4)">
+					<img class="img0" id="img5" src="img/fotos-snct/reufi (5).jpg" onclick="photo(5)">
+					<img class="img0" id="img6" src="img/fotos-snct/reufi (6).jpg" onclick="photo(6)">
+					<img class="img0" id="img7" src="img/fotos-snct/reufi (7).jpg" onclick="photo(7)">
+					<img class="img0" id="img8" src="img/fotos-snct/reufi (8).jpg" onclick="photo(8)">
+					<img class="img0" id="img9" src="img/fotos-snct/reufi (9).jpg" onclick="photo(9)">
+					<img class="img0" id="img10" src="img/fotos-snct/reufi (10).jpg" onclick="photo(10)">
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
