correção da imagem 00

--- a/fotos.html
+++ b/fotos.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8"/>	   
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>  
+		<meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<title>Reufi | Fotos da 13ª SNCT</title>
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
@@ -24,7 +24,7 @@
 				</figure>
 				<nav class="menu">
    					<ul type="disc">
-        				<h1> Menu Principal </h1> 
+        				<h1> Menu Principal </h1>
         				<li onclick="window.location.href = 'index.html';"> Home</li>
         				<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
         				<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
@@ -34,12 +34,12 @@
 			<section class="postagens">
 			<h1 id="date">FOTOS REGISTRADAS EM 18/10/2016</h1>
 			<figure id="fig">
-				<img id="img" src="img/fotos-snct/reufi (0).jpg">
+				<img id="img" src="img/fotos-snct/reufi00.jpg">
 				<figcaption>
 					<p id="description">Professores Denylson Melo e Marcia Regina juntos á alguns alunos da turma.</p>
 				</figcaption>
 			</figure>
-			</section>	
+			</section>
 			<aside class="windgets4">
 				<h2>Clique nas fotos para ver</h2>
 					<img class="img0" id="img1" src="img/fotos-snct/reufi (1).jpg" onclick="photo(1)">
