--- a/fotos.html
+++ b/fotos.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="pt-br">
 	<head>
-		<meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta charset="utf-8"/>	   
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Fotos da 13ª SNCT</title>
-        <link rel="icon" href="img/logo/logo2.png"/>
+        <link rel="icon" href="http://oi65.tinypic.com/oida0w.jpg"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <link rel="stylesheet" type="text/css" href="css/fotos.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
@@ -17,14 +17,14 @@
 		<div class="interface">
 			<header>
 				<figure id="logo-fig">
-					<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
-					<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
-					<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
-				<figcaption><p>ALPHA</p></figcaption>
+					<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
+					<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
+					<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
+					<figcaption><p>ALPHA</p></figcaption>
 				</figure>
 				<nav class="menu">
    					<ul type="disc">
-        				<h1> Menu Principal </h1>
+        				<h1> Menu Principal </h1> 
         				<li onclick="window.location.href = 'index.html';"> Home</li>
         				<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
         				<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
@@ -39,19 +39,19 @@
 					<p id="description">Professores Denylson Melo e Marcia Regina juntos á alguns alunos da turma.</p>
 				</figcaption>
 			</figure>
-			</section>
+			</section>	
 			<aside class="windgets4">
 				<h2>Clique nas fotos para ver</h2>
-					<img class="img0" id="img1" src="img/fotos-snct/reufi (1).jpg" onclick="photo(1)">
-					<img class="img0" id="img2" src="img/fotos-snct/reufi (2).jpg" onclick="photo(2)">
-					<img class="img0" id="img3" src="img/fotos-snct/reufi (3).jpg" onclick="photo(3)">
-					<img class="img0" id="img4" src="img/fotos-snct/reufi (4).jpg" onclick="photo(4)">
-					<img class="img0" id="img5" src="img/fotos-snct/reufi (5).jpg" onclick="photo(5)">
-					<img class="img0" id="img6" src="img/fotos-snct/reufi (6).jpg" onclick="photo(6)">
-					<img class="img0" id="img7" src="img/fotos-snct/reufi (7).jpg" onclick="photo(7)">
-					<img class="img0" id="img8" src="img/fotos-snct/reufi (8).jpg" onclick="photo(8)">
-					<img class="img0" id="img9" src="img/fotos-snct/reufi (9).jpg" onclick="photo(9)">
-					<img class="img0" id="img10" src="img/fotos-snct/reufi (10).jpg" onclick="photo(10)">
+					<img class="img0" id="img1" src="img/fotos-snct/reufi01.jpg" onclick="photo(1)">
+					<img class="img0" id="img2" src="img/fotos-snct/reufi02.jpg" onclick="photo(2)">
+					<img class="img0" id="img3" src="img/fotos-snct/reufi03.jpg" onclick="photo(3)">
+					<img class="img0" id="img4" src="img/fotos-snct/reufi04.jpg" onclick="photo(4)">
+					<img class="img0" id="img5" src="img/fotos-snct/reufi05.jpg" onclick="photo(5)">
+					<img class="img0" id="img6" src="img/fotos-snct/reufi06.jpg" onclick="photo(6)">
+					<img class="img0" id="img7" src="img/fotos-snct/reufi07.jpg" onclick="photo(7)">
+					<img class="img0" id="img8" src="img/fotos-snct/reufi08.jpg" onclick="photo(8)">
+					<img class="img0" id="img9" src="img/fotos-snct/reufi09.jpg" onclick="photo(9)">
+					<img class="img0" id="img10" src="img/fotos-snct/reufi10.jpg" onclick="photo(10)">
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
