--- a/iframe/imc-3.html
+++ b/iframe/imc-3.html
@@ -14,9 +14,9 @@
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img id="balao4" src="../img/talk/balao4.png"/>
-			<img id="balao5" src="../img/talk/balao5.png"/>
-			<img id="balao6" src="../img/talk/balao6.png"/>
+			<img id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
+			<img id="balao5" src="http://oi63.tinypic.com/23tgkk0.jpg"/>
+			<img id="balao6" src="http://oi68.tinypic.com/161bbqu.jpg"/>
 			<figcaption>
 				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
@@ -24,7 +24,7 @@
 		<article id="inf">
 			<h2>LEMBRE-SE</h2>
 			<figure>
-				<img id="like" src="../img/like.png"/>
+				<img id="like" src="https://ap.imagensbrasil.org/images/2016/10/30/like.png"/>
 				<figcaption id="figScrr">
 					<p id="scrr">O(a) nutricionista é sempre o melhor caminho!</p>
 					<p id="scrr2">Não faça nada sem acompanhamento.</p>
