--- a/iframe/imc-5.html
+++ b/iframe/imc-5.html
@@ -13,9 +13,9 @@
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img id="balao7" src="../img/talk/balao7.png"/>
-			<img id="balao4" src="../img/talk/balao4.png"/>
-			<img id="balao8" src="../img/talk/balao8.png"/>
+			<img id="balao7" src="http://oi64.tinypic.com/33m5p9s.jpg"/>
+			<img id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
+			<img id="balao8" src="http://oi66.tinypic.com/11vlbhc.jpg"/>
 			<figcaption>
 				<p id="ex2">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
@@ -23,7 +23,7 @@
 		<article id="inf">
 			<h2>AVISO</h2>
 			<figure>
-				<img id="danger" src="../img/danger.png"/>
+				<img id="danger" src="https://ap.imagensbrasil.org/images/2016/10/30/danger.png"/>
 				<figcaption id="figScrr">
 					<p id="scrr">Procure com urgência um(a) médico(a)!</p>
 					<p id="scrr2">Não faça nada sem acompanhamento.</p>
