--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>	   
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>  
 		<title>Reufi | Home</title>
-        <link rel="icon" href="img/logo/logo2.png"/>
+        <link rel="icon" href="http://oi65.tinypic.com/oida0w.jpg"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <style type="text/css">
         	@media screen and (min-width: 1080px) {
@@ -26,9 +26,9 @@
 		<div class="interface">
 			<header>
 			<figure id="logo-fig">
-				<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
-				<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
-				<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
+				<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
+				<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
+				<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
 				<figcaption><p>ALPHA</p></figcaption>
 			</figure>
 			<nav class="menu">
@@ -70,7 +70,7 @@
 			<aside class="windgets3">
 				<h2 onclick="window.location.href='fotos.html'" onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
 				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" onclick="window.location.href='fotos.html'" id="figCap">
-					<img id="capa" src="img/fotos-snct/reufi (capa).jpg">
+					<img id="capa" src="http://oi64.tinypic.com/2nlskrp.jpg.jpg">
 				</figure>
 			</aside>
 			<footer class="rodape">
