hospedando as imagens em outro servidor e as otimizando

--- a/fotos.html
+++ b/fotos.html
@@ -34,7 +34,7 @@
 			<section class="postagens">
 			<h1 id="date">FOTOS REGISTRADAS EM 18/10/2016</h1>
 			<figure id="fig">
-				<img id="img" src="img/fotos-snct/reufi00.jpg">
+				<img id="img" src="http://i68.tinypic.com/2cerfqs.jpg">
 				<figcaption>
 					<p id="description">Professores Denylson Melo e Marcia Regina juntos á alguns alunos da turma.</p>
 				</figcaption>
@@ -42,16 +42,16 @@
 			</section>	
 			<aside class="windgets4">
 				<h2>Clique nas fotos para ver</h2>
-					<img class="img0" id="img1" src="img/fotos-snct/reufi01.jpg" onclick="photo(1)">
-					<img class="img0" id="img2" src="img/fotos-snct/reufi02.jpg" onclick="photo(2)">
-					<img class="img0" id="img3" src="img/fotos-snct/reufi03.jpg" onclick="photo(3)">
-					<img class="img0" id="img4" src="img/fotos-snct/reufi04.jpg" onclick="photo(4)">
-					<img class="img0" id="img5" src="img/fotos-snct/reufi05.jpg" onclick="photo(5)">
-					<img class="img0" id="img6" src="img/fotos-snct/reufi06.jpg" onclick="photo(6)">
-					<img class="img0" id="img7" src="img/fotos-snct/reufi07.jpg" onclick="photo(7)">
-					<img class="img0" id="img8" src="img/fotos-snct/reufi08.jpg" onclick="photo(8)">
-					<img class="img0" id="img9" src="img/fotos-snct/reufi09.jpg" onclick="photo(9)">
-					<img class="img0" id="img10" src="img/fotos-snct/reufi10.jpg" onclick="photo(10)">
+					<img class="img0" id="img1" src="http://i64.tinypic.com/2yphhja.jpg" onclick="photo(1)">
+					<img class="img0" id="img2" src="http://i68.tinypic.com/180zmp.jpg" onclick="photo(2)">
+					<img class="img0" id="img3" src="http://i64.tinypic.com/2a4oft4.jpg" onclick="photo(3)">
+					<img class="img0" id="img4" src="http://i68.tinypic.com/1z5ntvk.jpg" onclick="photo(4)">
+					<img class="img0" id="img5" src="http://i67.tinypic.com/157bu51.jpg" onclick="photo(5)">
+					<img class="img0" id="img6" src="http://i67.tinypic.com/35i9g5t.jpg" onclick="photo(6)">
+					<img class="img0" id="img7" src="http://i65.tinypic.com/2zof4nn.jpg" onclick="photo(7)">
+					<img class="img0" id="img8" src="http://i64.tinypic.com/2usdgf8.jpg" onclick="photo(8)">
+					<img class="img0" id="img9" src="http://i67.tinypic.com/25a2r20.jpg" onclick="photo(9)">
+					<img class="img0" id="img10" src="http://i64.tinypic.com/2vb7cbc.jpg" onclick="photo(10)">
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
