corriginfo link de acesso a imagem de capa do album

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8"/>	   
@@ -82,7 +82,7 @@
 			<aside class="windgets3">
 				<h2 onclick="window.location.href='fotos.html'" onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
 				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" onclick="window.location.href='fotos.html'" id="figCap">
-					<img id="capa" src="http://oi64.tinypic.com/2nlskrp.jpg">
+					<img id="capa" src="http://i64.tinypic.com/oiajv5.jpg">
 				</figure>
 			</aside>
 			<footer class="rodape">
