modificando alguns erros na tela

--- a/iframe/iframe-index.html
+++ b/iframe/iframe-index.html
@@ -6,9 +6,9 @@
 	</head>
 	<body id="corpo" onload="fadein('talk1');">
 		<figure id="talk1">
-			<img id="balao1" src="http://oi66.tinypic.com/fp5lz5.jpg"/>
-			<img id="balao2" src="http://oi68.tinypic.com/24g830i.jpg"/>
-			<img id="balao3" src="http://oi64.tinypic.com/2m46991.jpg"/>
+			<img class="balao" id="balao1" src="http://oi66.tinypic.com/fp5lz5.jpg"/>
+			<img class="balao" id="balao2" src="http://oi68.tinypic.com/24g830i.jpg"/>
+			<img class="balao" id="balao3" src="http://oi64.tinypic.com/2m46991.jpg"/>
 			<figcaption>
 				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
