--- a/iframe/imc-1.html
+++ b/iframe/imc-1.html
@@ -10,13 +10,14 @@
             	<ul>
             		<li onclick="window.location.href='imc-1/dicas.html';">Sugestão de cardápio</li>
             		<li onclick="window.location.href='imc-1/alimentacao.html';">Dicas</li>
+            		<p id="avis">NAVEGUE AO LADO</p>
 				</ul>
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
-			<img id="balao5" src="http://oi63.tinypic.com/23tgkk0.jpg"/>
-			<img id="balao6" src="http://oi68.tinypic.com/161bbqu.jpg"/>
+			<img class="balao" id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
+			<img class="balao" id="balao5" src="http://oi63.tinypic.com/23tgkk0.jpg"/>
+			<img class="balao" id="balao6" src="http://oi68.tinypic.com/161bbqu.jpg"/>
 			<figcaption>
 				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
