--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 	</head>
 	<body>
 		<figure id="err">
-			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!<br>Estamos trabalhando nisso.</p></figcaption>
+			<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
+			<figcaption><p>Site incompatível com essa largura de tela!<br>Estamos trabalhando nisso.</p></figcaption>
 		</figure>
 		<div class="interface">
 			<header>
