--- a/iframe/imc-4/alimentacao.html
+++ b/iframe/imc-4/alimentacao.html
@@ -9,6 +9,7 @@
             <ul>
             	<li onclick="window.location.href='dicas.html';">Sugestão de cardápio</li>
             	<li onclick="window.location.href='alimentacao.html';">Dicas</li>
+            	<p id="avis">NAVEGUE AO LADO</p>
 			</ul>
 		</nav>
 		<!-- <p id="fonte">Fonte: conhecersaude.com</p> -->
