--- a/iframe/imc-5.html
+++ b/iframe/imc-5.html
@@ -9,13 +9,14 @@
            	<nav class ="menu-sec">
             	<ul>
             		<li onclick="window.location.href='imc-5/alimentacao.html';">Dicas</li>
+            		<p id="avis">NAVEGUE AO LADO</p>
 				</ul>
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img id="balao7" src="http://oi64.tinypic.com/33m5p9s.jpg"/>
-			<img id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
-			<img id="balao8" src="http://oi66.tinypic.com/11vlbhc.jpg"/>
+			<img class="balao" id="balao7" src="http://oi64.tinypic.com/33m5p9s.jpg"/>
+			<img class="balao" id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
+			<img class="balao" id="balao8" src="http://oi66.tinypic.com/11vlbhc.jpg"/>
 			<figcaption>
 				<p id="ex2">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
