alterações na pagina mobile

--- a/fotos.html
+++ b/fotos.html
@@ -11,26 +11,32 @@
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
 	</head>
 	<body>
-		<figure id="err">
-			<figcaption><p>Site incompatível com a tela<br/>do seu dispositivo!<br>Estamos trabalhando nisso.</p></figcaption>
+		<header>
+		<figure id="logo-fig">
+			<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
+			<figcaption>
+				<p id="alpha">ALPHA</p>
+				<p id="mobile">MOBILE</p>
+			</figcaption>
 		</figure>
+		<div id="mob">
+			<figure id="err">
+				<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
+				<figcaption><p>Página em construção</p></figcaption>
+			</figure>
+		</div>
+		</header>
 		<div class="interface">
-			<header>
-				<figure id="logo-fig">
-					<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
-					<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
-					<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
-					<figcaption><p>ALPHA</p></figcaption>
-				</figure>
-				<nav class="menu">
-   					<ul type="disc">
-        				<h1> Menu Principal </h1> 
-        				<li onclick="window.location.href = 'index.html';"> Home</li>
-        				<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
-        				<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
-	 				</ul>
-   				</nav>
-			</header>
+			<nav class="menu">
+   				<ul type="disc">
+        			<h1> Menu Principal </h1> 
+        			<li onclick="window.location.href = 'index.html';"> Home</li>
+        			<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
+        			<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
+	 			</ul>
+   			</nav>
 			<section class="postagens">
 			<h1 id="date">FOTOS REGISTRADAS EM 18/10/2016</h1>
 			<figure id="fig">
