--- a/index.html
+++ b/index.html
@@ -20,18 +20,24 @@
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
 	</head>
 	<body>
-		<figure id="err">
-			<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
-			<figcaption><p>Site incompatível com essa largura de tela!<br>Estamos trabalhando nisso.</p></figcaption>
+		<header>
+		<figure id="logo-fig">
+			<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
+			<figcaption>
+				<p id="alpha">ALPHA</p>
+				<p id="mobile">MOBILE</p>
+			</figcaption>
 		</figure>
-		<div class="interface">
-			<header>
-			<figure id="logo-fig">
-				<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
-				<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
-				<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
-				<figcaption><p>ALPHA</p></figcaption>
+		<div id="mob">
+			<figure id="err">
+				<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
+				<figcaption><p>Página em construção</p></figcaption>
 			</figure>
+		</div>
+		</header>
+		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
         			<h1> Menu Principal </h1> 
@@ -40,7 +46,6 @@
         			<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
 	 			</ul>
    			</nav>
-			</header>
 			<section class="postagens">
 				<hgroup id="imc-screen">
 					<h1 id="view_imc"><label for="mass-form">Veja aqui o seu IMC.</label></h1>
