--- a/fotos.html
+++ b/fotos.html
@@ -28,6 +28,7 @@
 			</figure>
 		</div>
 		</header>
+		<!-- PALESTRA COORDENADA POR: Emilly Durkheim -->
 		<div class="interface">
 			<nav class="menu">
    				<ul type="disc">
