melhorias no menu

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -40,9 +40,9 @@
 			<nav class="menu">
    				<ul type="disc">
         			<h1> Menu Principal </h1> 
-        			<li onclick="window.location.href = 'index.html';"> Home</li>
-        			<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
-        			<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
+        			<li><a href="index.html"> Home </a></li>
+        			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
+        			<li><a href="sobre.html"> Sobre nós </a></li>
 	 			</ul>
    			</nav>
 			<section class="postagens"> 
