--- a/fotos.html
+++ b/fotos.html
@@ -32,9 +32,9 @@
 			<nav class="menu">
    				<ul type="disc">
         			<h1> Menu Principal </h1> 
-        			<li onclick="window.location.href = 'index.html';"> Home</li>
-        			<li onclick="window.location.href = 'eaeNutri.html';"> Iae Nutri</li>
-        			<li onclick="window.location.href = 'sobre.html';"> Sobre nós</li>
+        			<li><a href="index.html"> Home </a></li>
+        			<li><a href="eaeNutri.html"> Iae Nutri </a></li>
+        			<li><a href="sobre.html"> Sobre nós </a></li>
 	 			</ul>
    			</nav>
 			<section class="postagens">
@@ -48,16 +48,16 @@
 			</section>	
 			<aside class="windgets4">
 				<h2>Clique nas fotos para ver</h2>
-					<img class="img0" id="img1" src="http://i64.tinypic.com/2yphhja.jpg" onclick="photo(1)">
-					<img class="img0" id="img2" src="http://i68.tinypic.com/180zmp.jpg" onclick="photo(2)">
-					<img class="img0" id="img3" src="http://i64.tinypic.com/2a4oft4.jpg" onclick="photo(3)">
-					<img class="img0" id="img4" src="http://i68.tinypic.com/1z5ntvk.jpg" onclick="photo(4)">
-					<img class="img0" id="img5" src="http://i67.tinypic.com/157bu51.jpg" onclick="photo(5)">
-					<img class="img0" id="img6" src="http://i67.tinypic.com/35i9g5t.jpg" onclick="photo(6)">
-					<img class="img0" id="img7" src="http://i65.tinypic.com/2zof4nn.jpg" onclick="photo(7)">
-					<img class="img0" id="img8" src="http://i64.tinypic.com/2usdgf8.jpg" onclick="photo(8)">
-					<img class="img0" id="img9" src="http://i67.tinypic.com/25a2r20.jpg" onclick="photo(9)">
-					<img class="img0" id="img10" src="http://i64.tinypic.com/2vb7cbc.jpg" onclick="photo(10)">
+					<a href="javascript: photo(1)"><img class="img0" id="img1" src="http://i64.tinypic.com/2yphhja.jpg"></a>
+					<a href="javascript: photo(2)"><img class="img0" id="img2" src="http://i68.tinypic.com/180zmp.jpg"></a>
+					<a href="javascript: photo(3)"><img class="img0" id="img3" src="http://i64.tinypic.com/2a4oft4.jpg"></a>
+					<a href="javascript: photo(4)"><img class="img0" id="img4" src="http://i68.tinypic.com/1z5ntvk.jpg"></a>
+					<a href="javascript: photo(5)"><img class="img0" id="img5" src="http://i67.tinypic.com/157bu51.jpg"></a>
+					<a href="javascript: photo(6)"><img class="img0" id="img6" src="http://i67.tinypic.com/35i9g5t.jpg"></a>
+					<a href="javascript: photo(7)"><img class="img0" id="img7" src="http://i65.tinypic.com/2zof4nn.jpg"></a>
+					<a href="javascript: photo(8)"><img class="img0" id="img8" src="http://i64.tinypic.com/2usdgf8.jpg"></a>
+					<a href="javascript: photo(9)"><img class="img0" id="img9" src="http://i67.tinypic.com/25a2r20.jpg"></a>
+					<a href="javascript: photo(10)"><img class="img0" id="img10" src="http://i64.tinypic.com/2vb7cbc.jpg"></a>
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
