melhoria no link para o album de fotos

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -86,10 +86,11 @@
 				</span>
 			</aside>
 			<aside class="windgets3">
-				<h2 onclick="window.location.href='fotos.html'" onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª Semana Nacional de Ciência e Tecnologia</h2>
-				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" onclick="window.location.href='fotos.html'" id="figCap">
+				<a href="fotos.html">
+				<h2 onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª SEMANA NACIONAL DE CIÊNCIA E TECNOLOGIA</h2>
+				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="figCap">
 					<img id="capa" src="http://i64.tinypic.com/oiajv5.jpg">
-				</figure>
+				</figure></a>
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
