corrigindo bug de imagens não carregarem e melhorias no album de fotos e nos links do site

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>	   
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Iae Nutri</title>
-        <link rel="icon" href="http://oi65.tinypic.com/oida0w.jpg"/>
+        <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <style type="text/css">
 			#logo-fig figcaption p {
@@ -21,9 +21,9 @@
 	<body>
 		<header>
 		<figure id="logo-fig">
-			<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
-			<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
-			<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
+			<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
+			<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
 			<figcaption>
 				<p id="alpha">ALPHA</p>
 				<p id="mobile">MOBILE</p>
@@ -31,7 +31,7 @@
 		</figure>
 		<div id="mob">
 			<figure id="err">
-				<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
+				<img src="img/screenc.png">
 				<figcaption><p>Página em construção</p></figcaption>
 			</figure>
 		</div>
@@ -77,7 +77,7 @@
 			</section>
 			<aside class="windgets">
 				<h2>Sobre a nutricionista</h2>
-				<img id="ft" src="https://ap.imagensbrasil.org/images/2016/10/30/nutri.jpg"/>
+				<img id="ft" src="img/nutri.jpg"/>
 				<span id="tx">
 					<h2>Tamires Lima da Silva</h2> 
 					<h3>Nutricionista, formada pela<br/>UNINOVAFAPI - Teresina, Piauí</h3>
@@ -89,7 +89,7 @@
 				<a href="fotos.html">
 				<h2 onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="fadeinH2">CLIQUE PARA VER AS FOTOS DA 13ª SEMANA NACIONAL DE CIÊNCIA E TECNOLOGIA</h2>
 				<figure onmouseout="fadeH2('out')" onmousemove="fadeH2('in')" id="figCap">
-					<img id="capa" src="http://i64.tinypic.com/oiajv5.jpg">
+					<img id="capa" src="img/fotos-snct/reufi-capa.jpg">
 				</figure></a>
 			</aside>
 			<footer class="rodape">
