--- a/fotos.html
+++ b/fotos.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>	   
         <meta name="viewport" content="width=device-width, initial-scale=1"/>  
 		<title>Reufi | Fotos da 13ª SNCT</title>
-        <link rel="icon" href="http://oi65.tinypic.com/oida0w.jpg"/>
+        <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <link rel="stylesheet" type="text/css" href="css/fotos.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
@@ -13,9 +13,9 @@
 	<body>
 		<header>
 		<figure id="logo-fig">
-			<img id="log1" src="http://oi64.tinypic.com/149y5hf.jpg" alt="Design by João Paulo Carvalho"/>
-			<img id="log2" src="http://oi65.tinypic.com/oida0w.jpg" alt="Design by João Paulo Carvalho"/>
-			<img id="log3" src="http://oi67.tinypic.com/2ex1zlk.jpg" alt="Design by João Paulo Carvalho"/>
+			<img id="log1" src="img/logo/logo1.png" alt="Design by João Paulo Carvalho"/>
+			<img id="log2" src="img/logo/logo2.png" alt="Design by João Paulo Carvalho"/>
+			<img id="log3" src="img/logo/logo_NAME.png" alt="Design by João Paulo Carvalho"/>
 			<figcaption>
 				<p id="alpha">ALPHA</p>
 				<p id="mobile">MOBILE</p>
@@ -23,7 +23,7 @@
 		</figure>
 		<div id="mob">
 			<figure id="err">
-				<img src="https://ap.imagensbrasil.org/images/2016/10/30/screenc.png">
+				<img src="img/screenc.png">
 				<figcaption><p>Página em construção</p></figcaption>
 			</figure>
 		</div>
@@ -39,8 +39,9 @@
    			</nav>
 			<section class="postagens">
 			<h1 id="date">FOTOS REGISTRADAS EM 18/10/2016</h1>
+			<form action="javascript: photo(0)"><button type="submit" id="viewClass">Ver a turma</button></form>
 			<figure id="fig">
-				<img id="img" src="http://i68.tinypic.com/2cerfqs.jpg">
+				<img id="img" src="img/fotos-snct/reufi00.jpg">
 				<figcaption>
 					<p id="description">Professores Denylson Melo e Marcia Regina juntos á alguns alunos da turma.</p>
 				</figcaption>
@@ -48,16 +49,16 @@
 			</section>	
 			<aside class="windgets4">
 				<h2>Clique nas fotos para ver</h2>
-					<a href="javascript: photo(1)"><img class="img0" id="img1" src="http://i64.tinypic.com/2yphhja.jpg"></a>
-					<a href="javascript: photo(2)"><img class="img0" id="img2" src="http://i68.tinypic.com/180zmp.jpg"></a>
-					<a href="javascript: photo(3)"><img class="img0" id="img3" src="http://i64.tinypic.com/2a4oft4.jpg"></a>
-					<a href="javascript: photo(4)"><img class="img0" id="img4" src="http://i68.tinypic.com/1z5ntvk.jpg"></a>
-					<a href="javascript: photo(5)"><img class="img0" id="img5" src="http://i67.tinypic.com/157bu51.jpg"></a>
-					<a href="javascript: photo(6)"><img class="img0" id="img6" src="http://i67.tinypic.com/35i9g5t.jpg"></a>
-					<a href="javascript: photo(7)"><img class="img0" id="img7" src="http://i65.tinypic.com/2zof4nn.jpg"></a>
-					<a href="javascript: photo(8)"><img class="img0" id="img8" src="http://i64.tinypic.com/2usdgf8.jpg"></a>
-					<a href="javascript: photo(9)"><img class="img0" id="img9" src="http://i67.tinypic.com/25a2r20.jpg"></a>
-					<a href="javascript: photo(10)"><img class="img0" id="img10" src="http://i64.tinypic.com/2vb7cbc.jpg"></a>
+					<a href="javascript: photo(1)"><img class="img0" id="img1" src="img/fotos-snct/reufi01.jpg"></a>
+					<a href="javascript: photo(2)"><img class="img0" id="img2" src="img/fotos-snct/reufi02.jpg"></a>
+					<a href="javascript: photo(3)"><img class="img0" id="img3" src="img/fotos-snct/reufi03.jpg"></a>
+					<a href="javascript: photo(4)"><img class="img0" id="img4" src="img/fotos-snct/reufi04.jpg"></a>
+					<a href="javascript: photo(5)"><img class="img0" id="img5" src="img/fotos-snct/reufi05.jpg"></a>
+					<a href="javascript: photo(6)"><img class="img0" id="img6" src="img/fotos-snct/reufi06.jpg"></a>
+					<a href="javascript: photo(7)"><img class="img0" id="img7" src="img/fotos-snct/reufi07.jpg"></a>
+					<a href="javascript: photo(8)"><img class="img0" id="img8" src="img/fotos-snct/reufi08.jpg"></a>
+					<a href="javascript: photo(9)"><img class="img0" id="img9" src="img/fotos-snct/reufi09.jpg"></a>
+					<a href="javascript: photo(10)"><img class="img0" id="img10" src="img/fotos-snct/reufi10.jpg"></a>
 			</aside>
 			<footer class="rodape">
 				<h3>Reufi | Projeto <span id="tavisNome">TAVIS</span> (Tecnologia Alimentando uma Vida Saudável) - By <span id="tavisNome">Cyborg Team</span> - 2016 - Parnaíba-PI</h3>
