--- a/iframe/iframe-index.html
+++ b/iframe/iframe-index.html
@@ -6,9 +6,9 @@
 	</head>
 	<body id="corpo" onload="fadein('talk1');">
 		<figure id="talk1">
-			<img class="balao" id="balao1" src="http://oi66.tinypic.com/fp5lz5.jpg"/>
-			<img class="balao" id="balao2" src="http://oi68.tinypic.com/24g830i.jpg"/>
-			<img class="balao" id="balao3" src="http://oi64.tinypic.com/2m46991.jpg"/>
+			<img class="balao" id="balao1" src="../img/talk/balao1.png"/>
+			<img class="balao" id="balao2" src="../img/talk/balao2.png"/>
+			<img class="balao" id="balao3" src="../img/talk/balao3.png"/>
 			<figcaption>
 				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
@@ -24,7 +24,7 @@
 				<li id="p3">Antonio Santos</li>
 				<li id="p4">Antônio Carlos</li>
 			<ul>
-			<img id="ifpiLogo" src="https://ap.imagensbrasil.org/images/2016/10/30/ifpilogo.png"/>
+			<img id="ifpiLogo" src="../img/ifpilogo.png"/>
 		</article>
 	</body>
 	<script language="javascript" src="../js/fadein-talk.js"></script>
