--- a/iframe/imc-1/dicas.html
+++ b/iframe/imc-1/dicas.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" type="text/css" href="../../css/iframe.css" />
-    </head>
+		<link rel="stylesheet" type="text/css" href="../../css/iframe.css"/>
+	</head>
 	<body>
 		<nav class ="menu-sec">
-           	<ul>
-           		<li onclick="window.location.href='dicas.html';">Sugestão de cardápio</li>
-           		<li onclick="window.location.href='alimentacao.html';">Dicas</li>
-           		<p id="avis">NAVEGUE AO LADO</p>
+            <ul>
+            	<li><a href='dicas.html'>Sugestão de cardápio</a></li>
+            	<li><a href='alimentacao.html'>Dicas</a></li>
+            	<p id="avis">NAVEGUE AO LADO</p>
 			</ul>
 		</nav>
 		<!-- <p id="fonte">Fonte: lifestyle.sapo.pt/<p> -->
