--- a/iframe/imc-5.html
+++ b/iframe/imc-5.html
@@ -8,15 +8,15 @@
 		<header id="secundario">
            	<nav class ="menu-sec">
             	<ul>
-            		<li onclick="window.location.href='imc-5/alimentacao.html';">Dicas</li>
+            		<li><a href='imc-5/alimentacao.html'>Dicas</a></li>
             		<p id="avis">NAVEGUE AO LADO</p>
 				</ul>
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img class="balao" id="balao7" src="http://oi64.tinypic.com/33m5p9s.jpg"/>
-			<img class="balao" id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
-			<img class="balao" id="balao8" src="http://oi66.tinypic.com/11vlbhc.jpg"/>
+			<img class="balao" id="balao7" src="../img/talk/balao7.png"/>
+			<img class="balao" id="balao4" src="../img/talk/balao4.png"/>
+			<img class="balao" id="balao8" src="../img/talk/balao8.png"/>
 			<figcaption>
 				<p id="ex2">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
@@ -24,7 +24,7 @@
 		<article id="inf">
 			<h2>AVISO</h2>
 			<figure>
-				<img id="danger" src="https://ap.imagensbrasil.org/images/2016/10/30/danger.png"/>
+				<img id="danger" src="../img/danger.png"/>
 				<figcaption id="figScrr">
 					<p id="scrr">Procure com urgência um(a) médico(a)!</p>
 					<p id="scrr2">Não faça nada sem acompanhamento.</p>
