--- a/iframe/imc-1.html
+++ b/iframe/imc-1.html
@@ -8,16 +8,16 @@
 		<header id="secundario">
            	<nav class ="menu-sec">
             	<ul>
-            		<li onclick="window.location.href='imc-1/dicas.html';">Sugestão de cardápio</li>
-            		<li onclick="window.location.href='imc-1/alimentacao.html';">Dicas</li>
+            		<li><a href="imc-1/dicas.html">Sugestão de cardápio</a></li>
+            		<li><a href="imc-1/alimentacao.html">Dicas</a></li>
             		<p id="avis">NAVEGUE AO LADO</p>
 				</ul>
 			</nav>
 		</header>
 		<figure id="talk2">
-			<img class="balao" id="balao4" src="http://oi63.tinypic.com/245mqu1.jpg"/>
-			<img class="balao" id="balao5" src="http://oi63.tinypic.com/23tgkk0.jpg"/>
-			<img class="balao" id="balao6" src="http://oi68.tinypic.com/161bbqu.jpg"/>
+			<img class="balao" id="balao4" src="../img/talk/balao4.png"/>
+			<img class="balao" id="balao5" src="../img/talk/balao5.png"/>
+			<img class="balao" id="balao6" src="../img/talk/balao6.png"/>
 			<figcaption>
 				<p id="ex">Diálogo meramente demonstrativo, sem distinção de sexo.</p>
 			</figcaption>
@@ -25,7 +25,7 @@
 		<article id="inf">
 			<h2>LEMBRE-SE</h2>
 			<figure>
-				<img id="like" src="https://ap.imagensbrasil.org/images/2016/10/30/like.png"/>
+				<img id="like" src="../img/like.png"/>
 				<figcaption id="figScrr">
 					<p id="scrr">O(a) nutricionista é sempre o melhor caminho!</p>
 					<p id="scrr2">Não faça nada sem acompanhamento.</p>
