--- a/iframe/imc-1/alimentacao.html
+++ b/iframe/imc-1/alimentacao.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="pt-br">
-<head>
-	<meta charset="utf-8"/>
-	<link rel="stylesheet" type="text/css" href="../../css/iframe.css"/>
-</head>
+	<head>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" type="text/css" href="../../css/iframe.css"/>
+	</head>
 	<body>
 		<nav class ="menu-sec">
             <ul>
-            	<li onclick="window.location.href='dicas.html';">Sugestão de cardápio</li>
-            	<li onclick="window.location.href='alimentacao.html';">Dicas</li>
+            	<li><a href='dicas.html'>Sugestão de cardápio</a></li>
+            	<li><a href='alimentacao.html'>Dicas</a></li>
             	<p id="avis">NAVEGUE AO LADO</p>
 			</ul>
 		</nav>
