--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				}
 			}
 		</style>
-        <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
-		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px") href="css/index_large.css"/>
+		<link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px") href="css/index_small.css"/>
 	</head>
 	<body>
 		<header>
