primeira interface mobile

--- a/eaeNutri.html
+++ b/eaeNutri.html
@@ -7,12 +7,14 @@
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
         <style type="text/css">
+        @media screen and (min-width: 1080px) {
 			#logo-fig figcaption p {
 				display: block;
 				margin-top: -75px;
 				margin-left: 179px;
 				font-weight: bold;
-				}
+			}
+        }
 		</style>
         <link rel="stylesheet" type="text/css" href="css/videos.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
