--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     </fieldset>
                 </form>
 			</aside>
+			<p id="comming">EM BREVE: DIÉTAS</p>
 			<aside class="windgets2">
 				<h2>Observação sobre o cálculo</h2>
 				<p>Não pode ser aplicado em crianças. Pessoas musculosas podem ter o IMC alto e não serem consideradas gordas. A influência de diferenças raciais e étnicas (de acordo com a organização mundial de saúde, pessoas de origem asiática poderiam ser consideradas acima do peso com um IMC de 23).</p>
