--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,13 @@
 		<title>Reufi | Sobre nós</title>
         <link rel="icon" href="img/logo/logo2.png"/>
         <!-- DESIGN BY "JOÃO PAULO CARVALHO" -->
+        <style type="text/css">
+        @media screen and (max-width: 1079px) {
+				#logo-fig figcaption p {
+					margin-left: 140px;
+				}
+			}
+		</style>
         <link rel="stylesheet" type="text/css" href="css/sobre.css"/>
         <link rel="stylesheet" type="text/css" media="screen and (max-width: 1079px)" href="css/index_small.css"/>
 		<link rel="stylesheet" type="text/css" media="screen and (min-width: 1080px)" href="css/index_large.css"/>
