--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
                     	<p id="alertPont">Em caso de números decimais, utilize ponto (.) e não vírgula (,).</p>
                 		<input name="massa" id="mass-form" type="text" placeholder="Massa corporal (Kg)" required />
                 		<input name="altura" id="alt-form" type="text" placeholder="Altura (m)" required/>
-                        <p id="sexLegend">Sexo: 
+                        <!-- <p id="sexLegend">Sexo: 
                         <input name="sexo" id="f" class="sex" value="fem" type="radio" required /><label for="f">Feminino</label>
-                        <input name="sexo" id="m" class="sex" value="mas" type="radio" required /><label for="m">Masculino</label></p>
+                        <input name="sexo" id="m" class="sex" value="mas" type="radio" required /><label for="m">Masculino</label></p> -->
+                        <select name="sexo" id="selectSex" placeholder="Informe o seu sexo">
+                        	<option if="n" value="0">Selecione o seu sexo</option>
+                        	<option id="f" value="fem">Feminino</option>
+                        	<option id="m" value="mas">Masculino</option>
+                        </select>
                         <button type="submit" id="makecalc">Calcule</button>
                     </fieldset>
                 </form>
